--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
 		"eject": "expo eject"
 	},
 	"dependencies": {
-		"expo": "~38.0.8",
+		"@react-navigation/native": "^5.7.3",
+		"@react-navigation/stack": "^5.9.0",
+		"expo": "^38.0.9",
 		"expo-status-bar": "^1.0.2",
 		"react": "~16.11.0",
 		"react-dom": "~16.11.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+		"react-native-flex-image": "^1.3.0",
 		"react-native-web": "~0.11.7"
 	},
 	"devDependencies": {
