--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
 		"eject": "expo eject"
 	},
 	"dependencies": {
+		"@babel/preset-react": "^7.10.4",
 		"@react-navigation/native": "^5.7.3",
 		"@react-navigation/stack": "^5.9.0",
+		"@types/fbemitter": "^2.0.32",
 		"expo": "^38.0.9",
 		"expo-status-bar": "^1.0.2",
+		"fbemitter": "^2.1.1",
 		"react": "~16.11.0",
 		"react-dom": "~16.11.0",
+		"react-jsx-parser": "^1.25.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+		"react-native-elements": "^2.2.1",
 		"react-native-flex-image": "^1.3.0",
 		"react-native-web": "~0.11.7"
 	},
