--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,7 +15,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "md5": "^2.3.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
