--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,13 @@
 		"@react-navigation/native": "^5.7.3",
 		"@react-navigation/stack": "^5.9.0",
 		"@types/fbemitter": "^2.0.32",
+		"@types/jsonwebtoken": "^8.5.0",
+		"@types/md5": "^2.2.0",
 		"expo": "^38.0.9",
 		"expo-status-bar": "^1.0.2",
 		"fbemitter": "^2.1.1",
 		"firebase": "^7.19.1",
+		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
 		"react": "~16.11.0",
 		"react-dom": "~16.11.0",
