--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "serve": "npm run build && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -14,8 +14,11 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/md5": "^2.2.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0"
   },
   "devDependencies": {
