--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,64 +1,67 @@
 {
-	"main": "node_modules/expo/AppEntry.js",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web",
-		"typecheck": "tsc --noEmit -p .",
-		"format": "prettier --write \"src/**/*.{ts,tsx}\"",
-		"format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
-		"lint": "eslint --max-warnings 0 \"src/**/*.{ts,tsx}\"",
-		"jest": "jest --coverage --passWithNoTests",
-		"test": "yarn lint && yarn typecheck && yarn format:check && yarn jest",
-		"eject": "expo eject"
-	},
-	"dependencies": {
-		"@babel/preset-react": "^7.10.4",
-		"@expo/style-utils": "^1.0.2",
-		"@react-navigation/native": "^5.7.3",
-		"@react-navigation/stack": "^5.9.0",
-		"@types/fbemitter": "^2.0.32",
-		"@types/jsonwebtoken": "^8.5.0",
-		"@types/md5": "^2.2.0",
-		"expo": "^38.0.9",
-		"expo-status-bar": "^1.0.2",
-		"fbemitter": "^2.1.1",
-		"firebase": "^7.19.1",
-		"jsonwebtoken": "^8.5.1",
-		"md5": "^2.3.0",
-		"react": "~16.11.0",
-		"react-dom": "~16.11.0",
-		"react-jsx-parser": "^1.25.1",
-		"react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-		"react-native-elements": "^2.2.1",
-		"react-native-flex-image": "^1.3.0",
-		"react-native-web": "~0.11.7"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.8.6",
-		"@types/jest": "^26.0.4",
-		"@types/react": "~16.9.41",
-		"@types/react-native": "~0.62.13",
-		"@types/react-test-renderer": "^16.9.2",
-		"eslint": "^7.4.0",
-		"eslint-config-kodefox": "^0.2.2",
-		"jest": "^26.1.0",
-		"jest-expo": "^38.0.2",
-		"prettier": "^2.0.5",
-		"react-native-testing-library": "^2.1.0",
-		"react-test-renderer": "^16.13.1",
-		"ts-jest": "^26.1.2",
-		"typescript": "^3.9.6"
-	},
-	"eslintConfig": {
-		"extends": "kodefox/react-native"
-	},
-	"prettier": {
-		"singleQuote": true,
-		"trailingComma": "all",
-		"arrowParens": "always"
-	},
-	"private": true,
-	"name": "reactive-app"
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "typecheck": "tsc --noEmit -p .",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint --max-warnings 0 \"src/**/*.{ts,tsx}\"",
+    "jest": "jest --coverage --passWithNoTests",
+    "test": "yarn lint && yarn typecheck && yarn format:check && yarn jest",
+    "eject": "expo eject",
+    "build": "next build"
+  },
+  "dependencies": {
+    "@babel/preset-react": "^7.10.4",
+    "@expo/style-utils": "^1.0.2",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "@types/fbemitter": "^2.0.32",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/md5": "^2.2.0",
+    "expo": "^38.0.9",
+    "expo-status-bar": "^1.0.2",
+    "fbemitter": "^2.1.1",
+    "firebase": "^7.19.1",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "next": "^10.0.0",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-jsx-parser": "^1.25.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-elements": "^2.2.1",
+    "react-native-flex-image": "^1.3.0",
+    "react-native-web": "~0.11.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@expo/next-adapter": "^2.1.41",
+    "@types/jest": "^26.0.4",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
+    "@types/react-test-renderer": "^16.9.2",
+    "eslint": "^7.4.0",
+    "eslint-config-kodefox": "^0.2.2",
+    "jest": "^26.1.0",
+    "jest-expo": "^38.0.2",
+    "prettier": "^2.0.5",
+    "react-native-testing-library": "^2.1.0",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^26.1.2",
+    "typescript": "^3.9.6"
+  },
+  "eslintConfig": {
+    "extends": "kodefox/react-native"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "always"
+  },
+  "private": true,
+  "name": "reactive-app"
 }
