Add expo-cli to dev dep and add build command

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "jest": "jest --coverage --passWithNoTests",
     "test": "yarn lint && yarn typecheck && yarn format:check && yarn jest",
     "eject": "expo eject",
-    "build": "next build"
+    "build": "expo build:web"
   },
   "dependencies": {
     "@babel/preset-react": "^7.10.4",
@@ -46,6 +46,7 @@
     "@types/react-test-renderer": "^16.9.2",
     "eslint": "^7.4.0",
     "eslint-config-kodefox": "^0.2.2",
+    "expo-cli": "^4.1.4",
     "jest": "^26.1.0",
     "jest-expo": "^38.0.2",
     "prettier": "^2.0.5",
