--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -7,3 +7,8 @@ typings/
 
 # Node.js dependency directory
 node_modules/
+
+# Log files
+database-debug.log
+firebase-debug.log
+firestore-debug.log
