Add babel-core dependency and hide highscore

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@expo/style-utils": "^1.0.2",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@types/babel-core": "^6.25.6",
     "@types/fbemitter": "^2.0.32",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/md5": "^2.2.0",
+    "babel-core": "^6.26.3",
     "expo": "^38.0.9",
     "expo-status-bar": "^1.0.2",
     "fbemitter": "^2.1.1",
