--- a/functions/package.json
+++ b/functions/package.json
@@ -22,9 +22,9 @@
     "md5": "^2.3.0"
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.2.0",
     "tslint": "^5.12.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "typescript": "^3.8.0"
   },
   "private": true
 }
